--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "autodll-webpack-plugin": "^0.4.2",
+    "axios": "^0.19.2",
     "next": "9.3.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
