--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "cors": "^2.8.5",
     "next": "9.3.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "socket.io": "^2.3.0",
     "styled-components": "^5.1.0"
   }
 }
